# julix_terminal

./: Cargo.toml  README.md
src/: main.rs  pty.rs  terminal.rs
