[package]
name = "julix"
version = "0.1.0"
edition = "2024"
authors = ["0k3ll0h <eouma359@gmail.com>"]
license = "MIT"
description = "A modern terminal emulator built with Rust"

[dependencies]
portable-pty = "0.8"
vte = "0.13"
crossterm = "0.27"
anyhow = "1.0"
bitflags = "2.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true